# pycoreml

./: README.md  pyproject.toml  setup.py
pycoreml/: __init__.py
pycoreml/examples/: demo.py
swift/: Package.resolved  Package.swift
swift/Sources/PyCoreML/: PyCoreML.swift
